@@ -184,7 +184,9 @@ rb-effect-area=Effect area
 rb-energy-consumption=Energy consumption
 rb-energy-per-shield-point=Energy per shield point
 rb-energy-production=Energy production
+rb-entities=Entities
 rb-entity=Entity
+rb-entity-type=Entity type
 rb-equipment-categories=Equipment categories
 rb-equipment-category=Equipment category
 rb-equipment=Equipment
@@ -332,7 +334,6 @@ rb-time-per-unit-desc=How long it takes to research one unit in a lab with a res
 rb-time-per-unit=Time per unit
 rb-toggle-completed=Toggle completed
 rb-tooltips=Tooltips
-rb-type=Type
 rb-unlocked-by=Unlocked by
 rb-unlocks-entities=Unlocks entities
 rb-unlocks-equipment=Unlocks equipment
