@@ -15,12 +15,12 @@ return function(database, dictionaries, metadata)
       distribution_effectivity = prototype.distribution_effectivity,
       effect_area = { height = effect_area:height(), width = effect_area:width() },
       energy_usage = prototype.energy_usage,
+      entity_type = { class = "entity_type", name = prototype.type },
       module_slots = prototype.module_inventory_size,
       placed_by = util.process_placed_by(prototype),
       prototype_name = name,
       science_packs = {},
       size = size,
-      type = { "entity-type." .. prototype.type },
       unlocked_by = {},
     }
 
